@@ -41,12 +41,20 @@ def analysisVerboseFixedPoint = (project.findProperty('analysisVerboseFixedPoint
 def analysisDisableBytecodeVerify = (project.findProperty('analysisDisableBytecodeVerify') ?: 'false')
     .toString()
     .toBoolean()
+
+def cores = Runtime.runtime.availableProcessors()
 def analysisJvmArgs = [
+        '-Xms150G',
         '-Xmx150G',
         '-XX:+UseParallelGC',
+        '-XX:+UseZGC',
+        '-XX:+ZGenerational',
         "-XX:ParallelGCThreads=${Runtime.runtime.availableProcessors()}",
-        "-Djava.util.concurrent.ForkJoinPool.common.parallelism=${Runtime.runtime.availableProcessors()}",
-        '-XX:-UseGCOverheadLimit'
+        "-XX:ConcGCThreads=${Math.max(1, cores / 2)}",
+        "-Djava.util.concurrent.ForkJoinPool.common.parallelism=${cores}",
+        '-XX:-UseGCOverheadLimit',
+        '-XX:MetaspaceSize=512m',
+        '-XX:MaxMetaspaceSize=1g',
 ]
 if (analysisDisableBytecodeVerify) {
     analysisJvmArgs.add('-noverify')
